Refactor api gateway and add auth feature
